  will now require that the spec is annotated with <<parallel-execution.adoc#isolated-execution, @Isolated>> or `@ResourceLock(org.spockframework.runtime.model.parallel.Resources.META_CLASS_REGISTRY)`. See <<interaction-based-testing.adoc#global-mocks-parallel-execution, Global mocks and parallel execution>>

=== Misc
* Add support for <<extensions.adoc#extension-store,keeping state in extensions>>
* Add support for parameter injection of `@TempDir`
* Add `@Snapshot` extension for <<extensions.adoc#snapshot-testing,snapshot testing>>
* Improve `@TempDir` field injection, now it happens before field initialization, so it can be used by other field initializers.
* Fix exception when configured `baseDir` was not existing, now `@TempDir` will create the baseDir directory if it is missing.
* Fix bad error message for collection conditions, when one of the operands is `null`
* Document `@ConditionBlock` Annotation spockPull:1709[]
* Document `old`-Method spockPull:1708[]
* Clarify documentation for global Mocks spockPull:1755[]
* Spock-Compiler does not use wrapper types anymore spockPull:1765[]
* Reduce lock contention of the `byte-buddy` mock maker, when multiple mocks are created concurrently spockPull:1778[]
* Documentation for DetachedMockFactory spockPull:1728[]
* Support creation of global Groovy mocks for abstract classes spockPull:1754[]

== 2.4-M1 (2022-11-30)

* Fix issues with Spring 6/Spring Boot 3 spockPull:1541[]

== 2.3 (2022-09-29)

* Add RepeatUntilFailure extension spockPull:1522[]
* Fix problem with TempDir failing when using a custom class that extends from `File` or `Path` spockPull:1519[]
* Fix issue with `Object` methods on interface spies spockPull:1529[]
* Fix equality checking of Mocks that implement `Comparable` spockPull:1323[]
* Validate uniqueness of fixture methods per specification class spockPull:1521[]
