@@ -1,15 +1,16 @@
 /*
- * Copyright 2010 the original author or authors.
+ * Copyright 2024 the original author or authors.
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *     https://www.apache.org/licenses/LICENSE-2.0
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
  */
 
 package org.spockframework.builder;
@@ -18,6 +19,7 @@ import java.lang.reflect.Modifier;
 
 import org.codehaus.groovy.runtime.MetaClassHelper;
 import org.spockframework.runtime.GroovyRuntimeUtil;
+import org.spockframework.util.CollectionUtil;
 
 public class BuilderHelper {
   public static Object createInstance(Class clazz, Object... args) {
@@ -30,6 +32,14 @@ public class BuilderHelper {
     }
 
     // IDEA: could support creation of collection types here
+
+    if (clazz.isEnum()) {
+      if (args.length == 1 && args[0] instanceof String) {
+        return Enum.valueOf(clazz, (String) args[0]);
+      } else {
+        throw new IllegalArgumentException("Cannot create enum " + clazz.getName() + " with arguments " + args);
+      }
+    }
 
     if ((clazz.getModifiers() & Modifier.ABSTRACT) != 0) {
       String kind = clazz.isPrimitive() ? "primitive" : clazz.isInterface() ? "interface" : "abstract";
