@@ -1,9 +1,26 @@
+/*
+ * Copyright 2024 the original author or authors.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
+ */
+
 package org.spockframework.tempdir;
 
 import org.spockframework.util.Beta;
 import spock.config.ConfigurationObject;
+import spock.lang.TempDir;
 
 import java.nio.file.Path;
+import java.util.Optional;
 
 /**
  *
@@ -32,8 +49,15 @@ public class TempDirConfiguration {
   public Path baseDir = null;
 
   /**
-   * Whether to keep the temp directory or not after test,
-   * default is system property {@code spock.tempDir.keep} or false if it is not set.
+   * Whether to keep the temp directory or not after test if it failed,
+   * default is system property {@link TempDir#TEMP_DIR_CLEANUP_PROPERTY} or {@link TempDir.CleanupMode#ALWAYS} if it is not set.
+   *
+   * @see TempDir#cleanup()
+   * @see TempDir#TEMP_DIR_CLEANUP_PROPERTY
+   *
+   * @since 2.3
    */
-  public boolean keep = Boolean.getBoolean("spock.tempDir.keep");
+  public TempDir.CleanupMode cleanup = Optional.ofNullable(System.getProperty(TempDir.TEMP_DIR_CLEANUP_PROPERTY))
+    .map(TempDir.CleanupMode::valueOf)
+    .orElse(TempDir.CleanupMode.ALWAYS);
 }
