@@ -1,3 +1,18 @@
+/*
+ * Copyright 2024 the original author or authors.
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
+ */
+
 package spock.lang;
 
 import org.spockframework.runtime.extension.ExtensionAnnotation;
@@ -49,4 +64,31 @@ import java.nio.file.Path;
 @Target({ElementType.FIELD, ElementType.PARAMETER})
 @ExtensionAnnotation(TempDirExtension.class)
 public @interface TempDir {
+  String TEMP_DIR_CLEANUP_PROPERTY = "spock.tempdir.cleanup";
+
+  /**
+   * Whether to cleanup the directory after the test.
+   *
+   * @since 2.3
+   */
+  CleanupMode cleanup() default CleanupMode.DEFAULT;
+
+  enum CleanupMode {
+    /**
+     * Use the default cleanup mode, configured via {@link #TEMP_DIR_CLEANUP_PROPERTY} or {@link org.spockframework.tempdir.TempDirConfiguration#cleanup}.
+     */
+    DEFAULT,
+    /**
+     * Always cleanup the directory after the test.
+     */
+    ALWAYS,
+    /**
+     * Cleanup the directory only if the test has succeeded.
+     */
+    ON_SUCCESS,
+    /**
+     * Never cleanup the directory after the test.
+     */
+    NEVER
+  }
 }
